# DjangoQuotesV4

./: README.md  docker-compose.yaml  pyproject.toml  settings.env
notes/: data_baser.py  quotes.json  scrapper.py  sqlite3.db
notes/noteapp/: forms.py  models.py  urls.py  views.py
notes/noteapp/templates/noteapp/: index.html
notes/notes/: settings.py  urls.py
notes/quotes/: forms.py  models.py  urls.py  views.py
notes/quotes/migrations/: 0001_initial.py  0002_author_description_author_image.py  0003_tag_alter_author_description.py
notes/quotes/templates/quotes/: add_author.html  add_quote.html  author.html  author_detail.html  quote.html  quote_detail.html
notes/users/templates/users/: profile.html
